Project

General

Profile

Actions

Bug #26972

closed

cluster [ERR] Error -2 reading object

Added by David Zafman over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://qa-proxy.ceph.com/teuthology/dzafman-2018-08-17_08:14:49-rados-wip-zafman-testing4-distro-basic-smithi/2914664

failure_reason: '"2018-08-17 18:56:47.708765 osd.7 (osd.7) 128 : cluster [ERR] Error -2 reading object 2:0f7a387a:::smithi02634103-5...:head" in cluster log

Not sure if it is justified to add this message to the log-whitelist

Actions #1

Updated by Sage Weil over 5 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by David Zafman over 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF